SONARPHP-1806 Fix S117 FP and S116 FN on PHP 8 constructor property promotion
S117 was raising false positives on promoted constructor properties by treating
them as regular parameters. S116 was missing them entirely since it only visited
CLASS_PROPERTY_DECLARATION nodes.

- S117: skip parameters where isPropertyPromotion() is true; their naming is
  governed by S116 (FieldNameCheck)
- S116: also visit METHOD_DECLARATION nodes and check promoted constructor
  parameters against the field naming pattern

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>